--- a/02-servicebus-clients/requirements.txt
+++ b/02-servicebus-clients/requirements.txt
@@ -6,7 +6,11 @@ charset-normalizer==2.0.12
 idna==3.3
 isodate==0.6.1
 msrest==0.6.21
+numpy==1.22.3
 oauthlib==3.2.0
+pandas==1.4.1
+python-dateutil==2.8.2
+pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
 six==1.16.0
